add controller and service layer for saving programs to db and also modified to accept multiple program at time of register